@@ -21,6 +21,7 @@ import org.apache.lucene.search.Query;
 import org.apache.lucene.search.Sort;
 import org.apache.lucene.search.SortField;
 import java.util.List;
+import java.util.ArrayList;
 
 /** A hash key encapsulating a query, a list of filters, and a sort
  *
@@ -47,6 +48,8 @@ public final class QueryResultKey {
 
     if (filters != null) {
       for (Query filt : filters)
+        // NOTE: simple summation used here so keys with the same filters but in
+        // different orders get the same hashCode
         h += filt.hashCode();
     }
 
@@ -78,7 +81,7 @@ public final class QueryResultKey {
     // first.
     if (this.sfields.length != other.sfields.length) return false;
     if (!this.query.equals(other.query)) return false;
-    if (!isEqual(this.filters, other.filters)) return false;
+    if (!unorderedCompare(this.filters, other.filters)) return false;
 
     for (int i=0; i<sfields.length; i++) {
       SortField sf1 = this.sfields[i];
@@ -89,17 +92,27 @@ public final class QueryResultKey {
     return true;
   }
 
-
-  // Do fast version, expecting that filters are ordered and only
-  // fall back to unordered compare on the first non-equal elements.
-  // This will only be called if the hash code of the entire key already
-  // matched, so the slower unorderedCompare should pretty much never
-  // be called if filter lists are generally ordered.
-  private static boolean isEqual(List<Query> fqList1, List<Query> fqList2) {
+  /** 
+   * compares the two lists of queries in an unordered manner such that this method 
+   * returns true if the 2 lists are the same size, and contain the same elements.
+   *
+   * This method should only be used if the lists come from QueryResultKeys which have 
+   * already been found to have equal hashCodes, since the unordered comparison aspects 
+   * of the logic are not cheap.
+   * 
+   * @return true if the lists of equivilent other then the ordering
+   */
+  private static boolean unorderedCompare(List<Query> fqList1, List<Query> fqList2) {
+    // Do fast version first, expecting that filters are usually in the same order
+    //
+    // Fall back to unordered compare logic on the first non-equal elements.
+    // The slower unorderedCompare should pretty much never be called if filter 
+    // lists are generally ordered consistently
     if (fqList1 == fqList2) return true;  // takes care of identity and null cases
     if (fqList1 == null || fqList2 == null) return false;
     int sz = fqList1.size();
     if (sz != fqList2.size()) return false;
+
     for (int i = 0; i < sz; i++) {
       if (!fqList1.get(i).equals(fqList2.get(i))) {
         return unorderedCompare(fqList1, fqList2, i);
@@ -108,18 +121,37 @@ public final class QueryResultKey {
     return true;
   }
 
+
+  /** 
+   * Does an unordered comparison of the elements of two lists of queries starting at 
+   * the specified start index.
+   * 
+   * This method should only be called on lists which are the same size, and where 
+   * all items with an index less then the specified start index are the same.
+   *
+   * @return true if the list items after start are equivilent other then the ordering
+   */
   private static boolean unorderedCompare(List<Query> fqList1, List<Query> fqList2, int start) {
-    int sz = fqList1.size();
-    outer:
+    assert null != fqList1;
+    assert null != fqList2;
+
+    final int sz = fqList1.size();
+    assert fqList2.size() == sz;
+
+    // SOLR-5618: if we had a garuntee that the lists never contained any duplicates,
+    // this logic could be a lot simplier 
+    //
+    // (And of course: if the SolrIndexSearcher / QueryCommmand was ever changed to
+    // sort the filter query list, then this whole method could be eliminated).
+
+    final ArrayList<Query> set2 = new ArrayList<Query>(fqList2.subList(start, sz));
     for (int i = start; i < sz; i++) {
       Query q1 = fqList1.get(i);
-      for (int j = start; j < sz; j++) {
-        if (q1.equals(fqList2.get(j)))
-          continue outer;
+      if ( ! set2.remove(q1) ) {
+        return false;
       }
-      return false;
     }
-    return true;
+    return set2.isEmpty();
   }
 
 }
